// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`client/messaging/common-message-layout/TextMessage message as a normal text 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 iejvgD"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      This is test message
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 iejvgD"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      here is a link 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link before a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 iejvgD"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP common-message-layout__MentionedUsername-sc-hg9wkq-2 jcBWEI"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a link between mentions 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 iejvgD"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP common-message-layout__MentionedUsername-sc-hg9wkq-2 jcBWEI"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
       see 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP common-message-layout__MentionedUsername-sc-hg9wkq-2 jcBWEI"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 iejvgD"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP common-message-layout__MentionedUsername-sc-hg9wkq-2 jcBWEI"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention before a link 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 iejvgD"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP common-message-layout__MentionedUsername-sc-hg9wkq-2 jcBWEI"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
       go to 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention between links 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 iejvgD"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
       go here
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP common-message-layout__MentionedUsername-sc-hg9wkq-2 jcBWEI"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
       or here 
      <a
        href="http://www.example.com"
        rel="nofollow noreferrer noopener"
        target="_blank"
      >
        http://www.example.com
      </a>
    </span>
  </div>
</div>
`;

exports[`client/messaging/common-message-layout/TextMessage message with a mention of self user 1`] = `
<div
  data-testid="message-container"
>
  <div
    class="message-layout__MessageContainer-sc-5nek6h-3 bvNHQE"
    role="document"
  >
    <div
      class="tooltip__TooltipChildrenContainer-sc-qaqusi-0 juzvnk message-layout__StyledTooltip-sc-5nek6h-1 ccOMhE"
      tabindex="0"
    >
      <span
        class="message-layout__Timestamp-sc-5nek6h-2 cJQON"
      >
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          [
        </i>
        12:00 AM
        <i
          aria-hidden="true"
          class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
        >
          ] 
        </i>
      </span>
    </div>
    <span
      class="common-message-layout__Username-sc-hg9wkq-0 wRZhC"
    >
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP"
      >
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
    <i
      aria-hidden="true"
      class="message-layout__Separator-sc-5nek6h-0 fGNlKA"
    >
      : 
    </i>
    <span
      class="common-message-layout__Text-sc-hg9wkq-1 DXhHQ"
    >
      Hey
       
      <span
        class="connected-username__Username-sc-1uo72rz-0 dFouJP common-message-layout__MentionedUsername-sc-hg9wkq-2 jcBWEI"
      >
        @
        <span
          aria-label="Username loading…"
          class="connected-username__LoadingName-sc-1uo72rz-1 drbiA-d"
        >
                     
        </span>
      </span>
    </span>
  </div>
</div>
`;
